Fix URL constructor deprecations
Adds `jdk-deprecated` signatures to the forbiddenapis check and handles
the deprecations.

We had this before https://github.com/crate/crate/pull/13651, but I
removed it in the PR because maven runs forbidden APIs via the
toolchains JDK, so it included Java 18, 19 and 20 deprecations. Before
we only got deprecations up to Java 17 because that's what the Github
workflow used.